--- a/html/comparison_evaluation.html
+++ b/html/comparison_evaluation.html
@@ -280,13 +280,12 @@
             <div class="instructions">
                 <h3>📋 Instructions</h3>
                 <ul>
-                    <li><strong>Watch all 3 videos from start to finish</strong> - Seeking forward is disabled to ensure smooth playback</li>
-                    <li><strong>You can pause/play and replay</strong> from the beginning as many times as needed</li>
-                    <li><strong>4 comparisons total</strong> - Each comparison shows InfinityStory vs 2 other methods</li>
-                    <li><strong>Answer 5 questions</strong> for each comparison set</li>
+                    <li><strong>Watch all 3 videos from start to finish</strong></li>
                     <li><strong>Select the BEST video</strong> for each criterion</li>
-                    <li><strong>Take your time</strong> - Quality matters more than speed</li>
                 </ul>
+                <p style="margin-top: 10px; color: #718096; font-style: italic;">
+                    Note: Seeking forward is disabled to ensure smooth playback
+                </p>
             </div>
 
             <div class="progress-section">
