Add cache-busting to comparison evaluation page

--- a/html/comparison_evaluation.html
+++ b/html/comparison_evaluation.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Video Comparison Evaluation</title>
     <style>
         * {
@@ -380,7 +383,12 @@
         </div>
     </div>
 
-    <script src="comparison_script.js"></script>
+    <script>
+        // Force reload scripts with timestamp to bust cache
+        const script = document.createElement('script');
+        script.src = 'comparison_script.js?v=' + Date.now();
+        document.body.appendChild(script);
+    </script>
 </body>
 </html>
 
