Enhanced iOS mobile video support: webkit-playsinline, preload=auto, removed controlsList

--- a/html/comparison_evaluation.html
+++ b/html/comparison_evaluation.html
@@ -300,19 +300,19 @@
             <div class="video-grid" id="videoGrid">
                 <div class="video-item">
                     <div class="video-label">Video A</div>
-                    <video id="videoA" controls playsinline preload="metadata" controlsList="nodownload nofullscreen noremoteplayback">
+                    <video id="videoA" controls playsinline webkit-playsinline preload="auto">
                         <source id="sourceA" src="" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-item">
                     <div class="video-label">Video B</div>
-                    <video id="videoB" controls playsinline preload="metadata" controlsList="nodownload nofullscreen noremoteplayback">
+                    <video id="videoB" controls playsinline webkit-playsinline preload="auto">
                         <source id="sourceB" src="" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-item">
                     <div class="video-label">Video C</div>
-                    <video id="videoC" controls playsinline preload="metadata" controlsList="nodownload nofullscreen noremoteplayback">
+                    <video id="videoC" controls playsinline webkit-playsinline preload="auto">
                         <source id="sourceC" src="" type="video/mp4">
                     </video>
                 </div>
