--- a/html/comparison_evaluation.html
+++ b/html/comparison_evaluation.html
@@ -308,19 +308,19 @@
             <div class="video-grid" id="videoGrid">
                 <div class="video-item">
                     <div class="video-label">Video A</div>
-                    <video id="videoA" controls playsinline webkit-playsinline preload="none">
+                    <video id="videoA" controls playsinline webkit-playsinline preload="metadata" muted>
                         <source id="sourceA" src="" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-item">
                     <div class="video-label">Video B</div>
-                    <video id="videoB" controls playsinline webkit-playsinline preload="none">
+                    <video id="videoB" controls playsinline webkit-playsinline preload="metadata" muted>
                         <source id="sourceB" src="" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-item">
                     <div class="video-label">Video C</div>
-                    <video id="videoC" controls playsinline webkit-playsinline preload="none">
+                    <video id="videoC" controls playsinline webkit-playsinline preload="metadata" muted>
                         <source id="sourceC" src="" type="video/mp4">
                     </video>
                 </div>
