Simplify iOS video playback - remove all complex workarounds, just use standard HTML5 video

--- a/html/comparison_evaluation.html
+++ b/html/comparison_evaluation.html
@@ -297,30 +297,22 @@
                 <p id="progressText" class="progress-text">Comparison 0 of 0</p>
             </div>
 
-            <!-- Load Videos Button for iOS -->
-            <div id="loadVideosPrompt" style="display: none; text-align: center; padding: 40px; background: #f7fafc; border-radius: 10px; margin: 20px 0;">
-                <p style="font-size: 1.2em; color: #4a5568; margin-bottom: 20px;">📱 <strong>Tap to Load Videos</strong></p>
-                <button id="loadVideosBtn" class="btn btn-primary" style="padding: 20px 60px; font-size: 1.2em;">
-                    Load Videos
-                </button>
-            </div>
-
             <div class="video-grid" id="videoGrid">
                 <div class="video-item">
                     <div class="video-label">Video A</div>
-                    <video id="videoA" controls playsinline webkit-playsinline preload="metadata" muted>
+                    <video id="videoA" controls playsinline webkit-playsinline preload="metadata">
                         <source id="sourceA" src="" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-item">
                     <div class="video-label">Video B</div>
-                    <video id="videoB" controls playsinline webkit-playsinline preload="metadata" muted>
+                    <video id="videoB" controls playsinline webkit-playsinline preload="metadata">
                         <source id="sourceB" src="" type="video/mp4">
                     </video>
                 </div>
                 <div class="video-item">
                     <div class="video-label">Video C</div>
-                    <video id="videoC" controls playsinline webkit-playsinline preload="metadata" muted>
+                    <video id="videoC" controls playsinline webkit-playsinline preload="metadata">
                         <source id="sourceC" src="" type="video/mp4">
                     </video>
                 </div>
